--- a/styles/style.css
+++ b/styles/style.css
@@ -4,20 +4,24 @@
 
 Uniformize background size (all grey)
 Center Game logo
+*/
 
-
-body { min-height: 100vh; }
+body {
+background-color: #7F8086; 
+}
 
 /* SPLASH PAGE STYLING */
 .splashpage {
 display: flex;
 flex-direction: column;
+justify-content: center;
+align-items: center;
 background-color: #7F8086;
+width: 100vw;
+height: 100vh;
 }
 
 #gamelogo {
-display: flex;
-justify-content: center; /* it's not centering */
 width: 1024px;
 height: 576px;
 }
@@ -35,16 +39,17 @@ align-items: center;
 display: flex;
 flex-direction: row;
 justify-content: center;
-/* align-items: center; */
-height: 100px;
+width: 20%;
+height: 20%;
 margin-top: 50px;
 margin-bottom: 50px;
 }
 
 #keys_uktext {
+position: absolute;
 margin-right: 20px;
 margin-left: 20px;
-font-size: 30px;
+font-size: 20px;
 font-weight: bold;
 text-transform: uppercase;
 text-align: center;
@@ -52,10 +57,14 @@ text-align: center;
 
 /* GAMEPAGE STYLING */
 
-#gameplay {
+#gameplay { /* Canvas not centered */
 display: flex;
+flex-direction: column;
 justify-content: center;
+align-items: center;
 background-color: #7F8086;
+width: 100vw;
+height: 100vh;
 }
 
 .gameplay-Btns {
@@ -77,6 +86,7 @@ margin-left: 40px;
 display: flex;
 flex-direction: column;
 justify-content: center; /* it's not centering */
+align-items: center;
 background-color: #7F8086;
 }
 
@@ -106,6 +116,7 @@ HighScores Table
 display: flex;
 flex-direction: column;
 justify-content: center; /* it's not centering */
+align-items: center;
 background-color: #7F8086;
 }
         
