--- a/styles/style.css
+++ b/styles/style.css
@@ -17,18 +17,21 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 background-color: #7F8086;
-width: 100vw;
-height: 100vh;
+width: 900px;
+height: 990px;
 }
 
 #gamelogo {
-width: 1024px;
-height: 576px;
+margin-top: 50px;
+width: 100%;
+max-width: 900px;
+height: auto;
 }
 
 #lp_uktext {
 display: flex;
 justify-content: center;
+font-size: medium;
 font-weight: bold;
 text-align: center;
 align-items: center;
@@ -39,10 +42,18 @@ align-items: center;
 display: flex;
 flex-direction: row;
 justify-content: center;
-width: 20%;
-height: 20%;
-margin-top: 50px;
-margin-bottom: 50px;
+width: 7%;
+height: 7%;
+margin-top: 20px;
+margin-bottom: 10px;
+}
+
+#left-arrow {
+    margin-right: 100px;
+}
+
+#right-arrow {
+    margin-left: 100px;
 }
 
 #keys_uktext {
@@ -57,52 +68,110 @@ text-align: center;
 
 /* GAMEPAGE STYLING */
 
-#gameplay { /* Canvas not centered */
+/*#gameplay {
 display: flex;
-flex-direction: column;
-justify-content: center;
+flex-direction: row;
 align-items: center;
-background-color: #7F8086;
-width: 100vw;
-height: 100vh;
+}*/
+
+#my-canvas {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
 }
 
-.gameplay-Btns {
+#gameplay-elements {
 display: flex;
-justify-content: center;
-align-items: center;
+flex-direction: column;
+justify-content: space-evenly;
+}
+
+#current-score {
+margin-top: 130px;
+margin-left: 20px;
+width: 200px;
+height: 100px;
+}
+
+#score-number {
+color: #FEE202;
+font-size: 50px;
+stroke: black;
+stroke-width: 4px;
+font-weight: bold;
+padding-right: 50px;
+margin-left: 110px;
 }
 
 #restartBtn {
-margin-right: 40px;   
+background-color: #FEE202;
+border: 4px solid black;
+width: 200px;
+height: 100px;
+margin-top: 170px;
+margin-left: 25px;
+font-size: 40px;
+font-weight: bolder;
+text-transform: uppercase;
+text-align: justify;
+line-height: 100px;
+box-sizing: border-box; 
 }
-    
+
 #muteBtn {
-margin-left: 40px;
+margin-top: 170px;
+margin-left: 100px;
 }
 
 /* GAMEOVER PAGE STYLING */
 #gameover {
 display: flex;
 flex-direction: column;
-justify-content: center; /* it's not centering */
+justify-content: center;
 align-items: center;
 background-color: #7F8086;
+width: 900px;
+height: 990px;
 }
 
 #gologo {
-display: flex;
-justify-content: center; /* it's not centering */
-width: 1024px;
-height: 576px
+margin-top: 50px;
+width: 500px;
+height: auto;
 }
 
 #go_uktext {
 display: flex;
 justify-content: center;
+font-size: medium;
 font-weight: bold;
 text-align: center;
 align-items: center;
+}
+
+.highscores {
+margin-bottom: 200px;
+}
+
+#scoreboard {
+margin-top: 10px;
+width: 100%;
+max-width: 300px;
+height: auto;
+}
+
+#tryagainBtn {
+display: flex;
+justify-content: center;
+background-color: #FEE202;
+border: 4px solid black;
+width: 200px;
+height: 100px;
+margin-top: 40px;
+margin-bottom: 40px;
+font-size: 30px;
+font-weight: bolder;
 }
 
 /*
@@ -146,7 +215,7 @@ margin-left: 40px;
 }
 
 
-/* Start/Restart/TryAgain Button */
+/* Start/TryAgain/PlayAgain Button */
 .btn {
     display: flex;
     justify-content: center;
@@ -154,14 +223,15 @@ margin-left: 40px;
     border: 4px solid black;
     width: 200px;
     height: 100px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     font-size: 40px;
     font-weight: bolder;
+    line-height: 0%;
     text-transform: uppercase;
     text-align: justify;
     line-height: 100px;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     }
     
 .btn-position {
@@ -169,14 +239,13 @@ margin-left: 40px;
     justify-content: center;
     align-content: center;
     flex-direction: column;
-
     }
     
     /* Bottom Buttons*/
     .last-btns {
     display: flex;
     justify-content: center;
-    height: 50px;
+    height: 20px;
     width: auto;
     margin-bottom: 70px;
     }
