--- a/styles/style.css
+++ b/styles/style.css
@@ -1,271 +1,261 @@
-/* Insert costum font */
-
-/* To-Dos:
-
-Uniformize background size (all grey)
-Center Game logo
-*/
-
-body {
-background-color: #7F8086; 
+/* Insert costum font */ 
+@font-face {
+    font-family: batmanforever;
+    src: url(../fonts/batmfa__.ttf);
 }
+
+/* Overall Styling */
+body {
+    background-color: #7F8086; 
+    }
+
+img {
+    max-width: 100%;
+    display: block;
+    }
+
 
 /* SPLASH PAGE STYLING */
-.splashpage {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-background-color: #7F8086;
-width: 900px;
-height: 990px;
-}
+/* 3 things to solve::
+- Logo centered
+- arrows resized
+- Keys Text vertically centered to the keys
+*/
 
-#gamelogo {
-margin-top: 50px;
-width: 100%;
-max-width: 900px;
-height: auto;
+#gamelogo { /* I want to center it */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    height: auto;
 }
 
 #lp_uktext {
-display: flex;
-justify-content: center;
-font-size: medium;
-font-weight: bold;
-text-align: center;
-align-items: center;
+    font-size: medium;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+    font-family: batmanforever, sans-serif;
+    margin-bottom: 40px;
 }
 
 /* Arrow Buttons */
 .arrows {
-display: flex;
-flex-direction: row;
-justify-content: center;
-width: 7%;
-height: 7%;
-margin-top: 20px;
-margin-bottom: 10px;
-}
-
-#left-arrow {
-    margin-right: 100px;
-}
-
-#right-arrow {
-    margin-left: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* Buttons are not resizing properly*/
 }
 
 #keys_uktext {
-position: absolute;
-margin-right: 20px;
-margin-left: 20px;
-font-size: 20px;
-font-weight: bold;
-text-transform: uppercase;
-text-align: center;
-}
+    margin-right: 20px;
+    margin-left: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    /* would be great to center it relative to the arrows */
+    }
 
-/* GAMEPAGE STYLING */
-
-/*#gameplay {
-display: flex;
-flex-direction: row;
-align-items: center;
-}*/
-
-#my-canvas {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-}
-
-#gameplay-elements {
-display: flex;
-flex-direction: column;
-justify-content: space-evenly;
-}
-
-#current-score {
-margin-top: 170px;
-margin-left: 20px;
-width: 200px;
-height: 100px;
-}
-
-#score-number {
-color: #FEE202;
-font-size: 50px;
-stroke: black;
-stroke-width: 4px;
-font-weight: bold;
-padding-right: 50px;
-margin-left: 110px;
-}
-
-#health-bar {
-margin-top: 40px;
-margin-left: 20px;
-width: 200px;
-height: 100px;
-}
-
-#restartBtn {
-background-color: #FEE202;
-border: 4px solid black;
-width: 200px;
-height: 100px;
-margin-top: 130px;
-margin-left: 25px;
-font-size: 40px;
-font-weight: bolder;
-text-transform: uppercase;
-text-align: justify;
-line-height: 100px;
-box-sizing: border-box; 
-}
-
-#muteBtn {
-margin-top: 130px;
-margin-left: 100px;
-}
-
-/* GAMEOVER PAGE STYLING */
-#gameover {
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-background-color: #7F8086;
-width: 900px;
-height: 990px;
-}
-
-#gologo {
-margin-top: 50px;
-width: 500px;
-height: auto;
-}
-
-#go_uktext {
-display: flex;
-justify-content: center;
-font-size: medium;
-font-weight: bold;
-text-align: center;
-align-items: center;
-}
-
-.highscores {
-margin-bottom: 200px;
-}
-
-#scoreboard {
-margin-top: 10px;
-width: 100%;
-max-width: 300px;
-height: auto;
-}
-
-#tryagainBtn {
-display: flex;
-justify-content: center;
-background-color: #FEE202;
-border: 4px solid black;
-width: 200px;
-height: 100px;
-margin-top: 40px;
-margin-bottom: 40px;
-font-size: 30px;
-font-weight: bolder;
-}
-
-/*
-HighScores Table
-#high-scores-table { //Will be used in the winner page too
-}
-*/
-
-/* WINNER PAGE STYLING */
-#winner {
-display: flex;
-flex-direction: column;
-justify-content: center; /* it's not centering */
-align-items: center;
-background-color: #7F8086;
-}
-        
-#yw_uktext {
-display: flex;
-justify-content: center;
-font-weight: bold;
-text-align: center;
-align-items: center;
-}
-
-#winlogo {
-display: flex;
-justify-content: center; /* it's not centering */
-width: 1024px;
-height: 576px;
-padding: 10px;
-}
-
-.sound {
-margin-right: 40px;
-
-}
-
-.lang {
-margin-left: 40px;
-}
-
-
-/* Start/TryAgain/PlayAgain Button */
-.btn {
-    display: flex;
-    justify-content: center;
+#startBtn {
     background-color: #FEE202;
     border: 4px solid black;
     width: 200px;
     height: 100px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 80px;
+    margin-bottom: 20px;
     font-size: 40px;
     font-weight: bolder;
-    line-height: 0%;
     text-transform: uppercase;
-    text-align: justify;
-    line-height: 100px;
-    /*box-sizing: border-box;*/
-    }
-    
-.btn-position {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    }
-    
-    /* Bottom Buttons*/
-    .last-btns {
-    display: flex;
-    justify-content: center;
-    height: 20px;
-    width: auto;
-    margin-bottom: 70px;
-    }
-    
-    
-
-
-
-
-/*
-.sound {
-max-width: 5px;
-max-height: 5px;
-object-fit: contain;
+    font-family: batmanforever, sans-serif;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+#startBtn:hover {
+    background-color: black;
+    color: #FEE202;
+    }
+
+.last-btns {
+    display: flex;
+    justify-content: center;
+}
+
+.sound {
+    margin-right: 40px;
+    
+}
+    
+.lang {
+    margin-left: 40px;
+}
+
+/* GAMEPAGE STYLING */
+
+#my-canvas {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    height: auto;
+    }
+
+#current-score {
+    margin-top: 170px;
+    margin-left: 20px;
+    width: 200px;
+    height: 100px;
+    }
+
+#score-number {
+    color: #FEE202;
+    font-size: 50px;
+    stroke: black;
+    stroke-width: 4px;
+    font-weight: bold;
+    padding-right: 50px;
+    margin-left: 110px;
+    }
+    
+#health-bar {
+    margin-top: 40px;
+    margin-left: 20px;
+    width: 200px;
+    height: 100px;
+    }
+
+#restartBtn {
+    background-color: #FEE202;
+    border: 4px solid black;
+    width: 200px;
+    height: 100px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+    font-size: xx-large;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-family: batmanforever, sans-serif;
+    /*position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);*/
+    }
+    
+#restartBtn:hover {
+    background-color: black;
+    color: #FEE202;
+    }
+
+/* GAMEOVER PAGE STYLING */
+/* 1 thing to solve::
+- Insert Space for High Scores
+
 */
+
+#gologo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:600px;
+    max-height:auto;
+    width: auto;
+    height: auto;
+}
+
+#go_uktext {
+    font-size: medium;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+    font-family: batmanforever, sans-serif;
+    margin-bottom: 40px;
+}
+
+#scoreboard {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:300px;
+    max-height:auto;
+    width: auto;
+    height: auto;
+    }
+
+#tryagainBtn {
+    background-color: #FEE202;
+    border: 4px solid black;
+    width: 200px;
+    height: 100px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-family: batmanforever, sans-serif;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#tryagainBtn:hover {
+    background-color: black;
+    color: #FEE202;
+    }
+
+
+/* WINNER PAGE STYLING */
+
+#winlogo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:600px;
+    max-height:auto;
+    width: auto;
+    height: auto;
+}
+
+#yw_uktext {
+    font-size: medium;
+    font-weight: bold;
+    text-align: center;
+    align-items: center;
+    font-family: batmanforever, sans-serif;
+    margin-bottom: 40px;
+}
+
+#scoreboard {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:300px;
+    max-height:auto;
+    width: auto;
+    height: auto;
+    }
+
+#playagainBtn {
+    background-color: #FEE202;
+    border: 4px solid black;
+    width: 200px;
+    height: 100px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-family: batmanforever, sans-serif;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#playagainBtn:hover {
+    background-color: black;
+    color: #FEE202;
+    }
