--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,8 @@ img {
 
 
 /* SPLASH PAGE STYLING */
-/* 3 things to solve::
-- Logo centered
-- arrows resized
-- Keys Text vertically centered to the keys
-*/
 
-#gamelogo { /* I want to center it */
+#gamelogo {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -44,17 +39,26 @@ img {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* Buttons are not resizing properly*/
 }
+
+#left-arrow {
+    height: 80px;
+
+}
+
+#right-arrow {
+    height: 80px;
+    
+    }
 
 #keys_uktext {
     margin-right: 20px;
     margin-left: 20px;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: bolder;
     text-transform: uppercase;
     text-align: center;
-    /* would be great to center it relative to the arrows */
+    font-family: batmanforever, sans-serif;
     }
 
 #startBtn {
@@ -62,7 +66,7 @@ img {
     border: 4px solid black;
     width: 200px;
     height: 100px;
-    margin-top: 80px;
+    margin-top: 120px;
     margin-bottom: 20px;
     font-size: 40px;
     font-weight: bolder;
@@ -82,6 +86,7 @@ img {
 .last-btns {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .sound {
